--- a/PORTFOLIO 1TRY.html
+++ b/PORTFOLIO 1TRY.html
@@ -28,7 +28,8 @@
         <div class="container">
             <div class="me-content">
                 <h1>Hi, I'm Kelvin Mutinda</h1>
-                <p>A passionate Electrical engineer  with expertise in web design and development. I create beautiful, functional solutions for the web.</p>
+                <p>A passionate Electrical engineer  with expertise in web design and development. I create beautiful, functional solutions for the electrical engineering 
+                    field using web and other softwares and applications.</p>
                 <a href="#projects" class="btn">View My Work</a>
             </div>
         </div>
@@ -46,8 +47,9 @@
                 </div>
                 <div class="about-text">
                     <h3>Who Am I?</h3>
-                    <p>I'm a creative professional with a passion for building exceptional digital experiences. With [X] years of experience in the industry, I've helped numerous clients bring their ideas to life.</p>
+                    <p>I'm a creative, passionate aspiring solutions provider for building exceptional digital experiences.I do not have alot of experience in the industry, but I am passionate about learning and bringing to life many life transforming solutions for the world.</p>
                     <p>My approach combines technical expertise with an eye for design, ensuring that every project I work on is not only functional but also visually appealing and user-friendly.</p>
+                    <p>With exposure in the electrical market gap, Iam working to be a formidable force in providing world class applications for the technical world which will ease day to day operations in the life of consumers.</p>
                     <div class="skills">
                         <h4>My Skills</h4>
                         <div class="skill-tags">
